--- a/norlag.qmd
+++ b/norlag.qmd
@@ -20,14 +20,14 @@ I denne sammenhengen betyr det i praksis at du bør jobbe på UiO-OneDrive. Alts
 ### Signere samtykkeskjema
 For å få tilgang på datasettet må du oppgi din uio-epostadresse i [dette nettskjemaet](https://nettskjema.no/a/336610), så vil emneansvarlig legge deg inn i systemet. Du får så tilsendt en lenke fra Sikt med videre instruksjoner. Du skal signere et samtykkeskjema. 
 
-Etter at du har signert samtykkeskjema laster du ned dette som en pdf-fil og laster dette opp i [dette skjemaet](https://nettskjema.no/a/336612). 
+Etter at du har signert samtykkeskjema laster du ned dette som en pdf-fil og laster dette opp i [dette skjemaet](https://nettskjema.no/a/336612). Hvis du ikke lastet det ned som pdf-fil med en gang, så finner du det igjen ved å logge inn på [Sikt sine sider for data access](https://minside.nsd.no/data-access). 
 
 
 
 ### Nedlasting av data
 Du kan laste ned et datasett fra plattformen til Sikt, men ikke gjør det. Datasettet trenger litt opprydning først. Etter at du har signert samtykket, så blir datasettet delt med deg fra emneansvarlige via OneDrive. Du må da laste ned en kopi av datasettet til ditt eget område etter anvisninger ovenfor. 
 
-
+**OBS!!** Dere signerer en avtale om bruk av data som er begrenset til å brukes til metodeundervisningen på master i sosiologi ved UiO. Den avtalen har også en begrensning i tid. Les avtalen nøye. Dere har et selvstendig ansvar for å overholde betingelsene, herunder at dataene skal slettes innen angitt dato. Det er fult mulig å bruke disse dataene til senere prosjekter, f.eks. til masteroppgave, men da må det søkes på nytt.^[Hvis dere skriver ryddige script nå, så kan alt dere gjør lett reproduseres senere slik at ny søknad og ny utlevering av data ikke skal medføre merarbeid med data.]
 
 
 ## Innlesning av data
