--- a/norlag.qmd
+++ b/norlag.qmd
@@ -32,62 +32,10 @@ Du kan laste ned et datasett fra plattformen til Sikt, men ikke gjør det. Datas
 
 ## Innlesning av data
 
+Datasettet norlag.rds er altså konvertert til R-formatet rds. Dette datasettet kan da enkelt leses inn med `readRDS()` som følger: 
 
 ```{r}
-#| echo: false
-#| warning: false
-#| error: false 
-
-
-## OBS! Det er noen nummeriske med filter-verdier
-library(tidyverse)
-library(haven)
-norlag <- read_stata("data/norlag_panel2022.dta", encoding = "utf-8") %>% 
-  filter(iodeltagelse == 1 |  
-           iodeltagelse == 2 & round %in% c(1, 3) | 
-           iodeltagelse == 3 & round %in% c(2, 3) |
-           iodeltagelse == 4 & round %in% c(1) |
-           iodeltagelse == 5 & round %in% c(1, 2) |
-           iodeltagelse == 6 & round %in% c(2)
-         ) %>% 
-  # generelle missing
-    mutate(across( where(is.labelled) ,  ~replace(., 
-                                        . %in% c(997, 998, 999, 99999, 999999), 
-                                        NA))) %>%
-  # noen spesielle missing - som kanskje gjelder overalt?
-      mutate(across(where(is.labelled) ,  ~replace(., 
-                                        . %in% c(994, 995, 996, 9996), 
-                                        NA))) %>%
-    # noen spesielle missing - som kanskje gjelder overalt?
-      mutate(across(where(is.labelled) ,  ~replace(., 
-                                        . %in% c(9993, 9994, 9995, 9996, 9997, 9998, 999), 
-                                        NA))) %>%
-  # inpartbankinnsk og fremover
-        mutate(across(where(is.labelled) ,  ~replace(., 
-                                        . %in% c(99999996,
-                                                 999999995,
-                                                 999999996,
-                                                 999999999), 
-                                        NA))) %>%
-  mutate(across(where(is.labelled), ~replace(. ,
-                                             str_sub(., 1, 7) == "filter:", NA))) %>% 
-  labelled::drop_unused_value_labels() %>% 
-  labelled::unlabelled()
-
-saveRDS(norlag, "data/norlag_panel.rds")
-
-# norlag %>% 
-#   select(iodeltagelse, round) %>% 
-#   table()
-
-```
-
-
-
-Datasettet norlag_panel.rds er altså konvertert til R-formatet rds. Dette datasettet kan da enkelt leses inn med `readRDS()` som følger: 
-
-```{r}
-norlag <- readRDS("data/norlag_panel.rds")
+norlag <- readRDS("data/norlag.rds")
 dim(norlag)
 
 ```
