--- a/norlag.qmd
+++ b/norlag.qmd
@@ -1,48 +1,37 @@
 # Datasettet [NorLAG](https://norlag.nsd.no/)
 
-På SOS4020 skal vi bruke et datasett fra surveyen NorLAG. Vi bruker det også i forkurset slik at du vil spare litt tid og arbeid når SOS4020 starter for alvor. Dette er ikke offentlig tilgjengelige data, så det er en prosedyre for å få tilgang. Her er instruksjonene for dette kurset. 
+På SOS4020 skal vi bruke et datasett fra surveyen NorLAG. Vi bruker det også i forkurset slik at du vil spare litt tid og arbeid når SOS4020 starter for alvor. Dette er ikke offentlig tilgjengelige data, så det er en prosedyre for å få tilgang. Her er instruksjonene for dette kurset.
 
-Det viktigste for dette kurset er at dere har et rimelig ryddig datasett slik at dere kan fokusere på andre ting. Det opprinnelige datasettet er levert i Stata-format og det er en del utfordringer med å importere disse dataene bl.a. på grunn av hvordan de har valgt å kode [missing og filterverdier](https://norlag.nsd.no/filterverdier) og lagt denne typen metadata inn i Stataformatet. I R er det en lite hensiktsmessig måte å jobbe med dataene på, så disse tingene er ryddet opp i her. 
+Det viktigste for dette kurset er at dere har et rimelig ryddig datasett slik at dere kan fokusere på andre ting. Det opprinnelige datasettet er levert i Stata-format og det er en del utfordringer med å importere disse dataene bl.a. på grunn av hvordan de har valgt å kode [missing og filterverdier](https://norlag.nsd.no/filterverdier) og lagt denne typen metadata inn i Stataformatet. I R er det en lite hensiktsmessig måte å jobbe med dataene på, så disse tingene er ryddet opp i her.
 
+-   Gi emneansvarlig din epostadresse
+-   Last opp signert samtykkeskjema
+-   Få levert ut bearbeidet datasett fra emneansvarlig
 
-* Gi emneansvarlig din epostadresse
-* Last opp signert samtykkeskjema 
-* Få levert ut bearbeidet datasett fra emneansvarlig
+Så kan du begynne å jobbe med dataene.
 
-Så kan du begynne å jobbe med dataene. 
+## Tilgang og lagring
 
-## Tilgang og lagring 
-NorLAG er [gule data](https://www.uio.no/tjenester/it/sikkerhet/lsis/tillegg/lagring/infoklasser.html) og har restriksjoner på bruk og lagring. Du er pliktet til å sette deg inn i retningslinjene som du finner [på denne siden](https://www.uio.no/tjenester/it/sikkerhet/lsis/tillegg/lagringsguide.html). 
+NorLAG er [gule data](https://www.uio.no/tjenester/it/sikkerhet/lsis/tillegg/lagring/infoklasser.html) og har restriksjoner på bruk og lagring. Du er pliktet til å sette deg inn i retningslinjene som du finner [på denne siden](https://www.uio.no/tjenester/it/sikkerhet/lsis/tillegg/lagringsguide.html).
 
-I denne sammenhengen betyr det i praksis at du bør jobbe på UiO-OneDrive. Altså, ikke lagre data på din personlige datamaskin og ikke en personlig skytjeneste. Merk at det er *forskjell* på f.eks. OneDrive gjennom UiO og privat. 
+I denne sammenhengen betyr det i praksis at du bør jobbe på UiO-OneDrive. Altså: ikke lagre data på din personlige datamaskin og ikke en personlig skytjeneste. Merk at det er *forskjell* på f.eks. OneDrive gjennom UiO og privat.
 
+For å få tilgang på datasettet må du gjøre følgende:
 
-### Signere samtykkeskjema
-For å få tilgang på datasettet må du oppgi din uio-epostadresse i [dette nettskjemaet](https://nettskjema.no/a/336610), så vil emneansvarlig legge deg inn i systemet. Du får så tilsendt en lenke fra Sikt med videre instruksjoner. Du skal signere et samtykkeskjema. 
+1)  Oppgi din uio-epostadresse i [dette nettskjemaet](https://nettskjema.no/a/336610). Emneansvarlig legge deg inn i systemet. 
+2)  Du får tilsendt en lenke fra Sikt med videre instruksjoner om hvordan du signerer en avtale. Les avtalen og signer digitalt.
+3)  Last ned pdf-versjon av den signerte avtalen og behold den for senere referanse. Du kan også gjøre det senere ved å logge inn på [Sikt sine sider for data access](https://minside.nsd.no/data-access).
+4)  Laster opp den signerte avtalen i [dette skjemaet](https://nettskjema.no/a/336612). 
+5)  Emneansvarlig vil dele en mappe med deg i Sharepoint der du kun har lesetilgang. Her ligger tilrettelagte versjoner av datasettet.[^norlag-1] Kopier alle filene over til en lokal mappe i din UiO-OneDrive (se ovenfor).
 
-Etter at du har signert samtykkeskjema laster du ned dette som en pdf-fil og laster dette opp i [dette skjemaet](https://nettskjema.no/a/336612). Hvis du ikke lastet det ned som pdf-fil med en gang, så finner du det igjen ved å logge inn på [Sikt sine sider for data access](https://minside.nsd.no/data-access). 
+[^norlag-1]: Du kan også laste ned et datasett fra plattformen til Sikt, men vi skal kun bruke de tilrettelagte dataene i forkurset. Som du vil lære om i dette kurset er det ikke alltid import av data helt lett.
 
+**OBS!!** Dere signerer en avtale om bruk av data som er begrenset til å brukes til metodeundervisningen på master i sosiologi ved UiO. Den avtalen har også en begrensning i tid. Les avtalen nøye. Dere har et selvstendig ansvar for å overholde betingelsene, herunder at dataene skal slettes innen angitt dato. Det er fult mulig å bruke disse dataene til senere prosjekter, f.eks. til masteroppgave, men da må det søkes på nytt.[^norlag-2]
 
+[^norlag-2]: Hvis dere skriver ryddige script nå, så kan alt dere gjør lett reproduseres senere slik at ny søknad og ny utlevering av data ikke skal medføre merarbeid med data.
 
-### Nedlasting av data
-Du kan laste ned et datasett fra plattformen til Sikt, men ikke gjør det. Datasettet trenger litt opprydning først. Etter at du har signert samtykket, så blir datasettet delt med deg fra emneansvarlige via OneDrive. Du må da laste ned en kopi av datasettet til ditt eget område etter anvisninger ovenfor. 
+### Innlesning av data
 
-**OBS!!** Dere signerer en avtale om bruk av data som er begrenset til å brukes til metodeundervisningen på master i sosiologi ved UiO. Den avtalen har også en begrensning i tid. Les avtalen nøye. Dere har et selvstendig ansvar for å overholde betingelsene, herunder at dataene skal slettes innen angitt dato. Det er fult mulig å bruke disse dataene til senere prosjekter, f.eks. til masteroppgave, men da må det søkes på nytt.^[Hvis dere skriver ryddige script nå, så kan alt dere gjør lett reproduseres senere slik at ny søknad og ny utlevering av data ikke skal medføre merarbeid med data.]
+Datasettet norlag.rds er altså konvertert til R-formatet rds. Når dette er gjort er du klar for både forkurset og SOS4020.
 
-
-## Innlesning av data
-
-Datasettet norlag.rds er altså konvertert til R-formatet rds. Dette datasettet kan da enkelt leses inn med `readRDS()` som følger: 
-
-```{r}
-norlag <- readRDS("data/norlag.rds")
-dim(norlag)
-
-```
-
-
-
-
-
-
-
+Nest økt vil omhandle innlesning av data: både rds og andre vanlige formater.
